2013-02-07  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Cleanup command-line defines
        https://bugs.webkit.org/show_bug.cgi?id=109213

        Reviewed by Xan Lopez.

        * TestWebKitAPI/config.h: Include the autotoolsconfig.h header to pick
        up defines from autoconf.

2013-02-07  Ryosuke Niwa  <rniwa@webkit.org>

        git.svn_revision doesn't fetch the same revision as svn.svn_revision
        https://bugs.webkit.org/show_bug.cgi?id=108684

        Reviewed by Dirk Pranke.

        Always call git log on the checkout root.

        * Scripts/webkitpy/common/checkout/scm/git.py:
        (Git.svn_revision):

2013-02-07  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Patch for testing Win EWS bots.

        * Scripts/webkitpy/tool/steps/runtests.py:
        (RunTests.run):

2013-02-07  Gavin Peters  <gavinp@chromium.org>

        Unreviewed, rolling out r142165.
        http://trac.webkit.org/changeset/142165
        https://bugs.webkit.org/show_bug.cgi?id=108466

        Broke linux_aura builds.

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
        * DumpRenderTree/DumpRenderTree.gypi:
        * DumpRenderTree/chromium/TestRunner/public/WebPreferences.h:
        * DumpRenderTree/chromium/TestRunner/public/WebTask.h:
        (WebTaskList):
        * DumpRenderTree/chromium/TestRunner/public/WebTestCommon.h: Removed.
        * DumpRenderTree/chromium/TestRunner/public/WebTestInterfaces.h:
        (WebTestInterfaces):
        * DumpRenderTree/chromium/TestRunner/public/WebTestProxy.h:
        (WebTestProxyBase):
        * DumpRenderTree/chromium/TestRunner/src/AccessibilityUIElementChromium.cpp:
        (WebTestRunner::AccessibilityUIElement::AccessibilityUIElement):
        (WebTestRunner::AccessibilityUIElementList::getOrCreate):
        (WebTestRunner::AccessibilityUIElementList::createRoot):
        * DumpRenderTree/chromium/TestRunner/src/AccessibilityUIElementChromium.h: