@@ -90,21 +90,21 @@ class RunTests(AbstractStep):
                 "--exit-after-n-failures=%s" % self.NON_INTERACTIVE_FAILURE_LIMIT_COUNT,
             ])
 
-            try:
-                print "BUILD CONFIGURATION";
-                print self._options.build_style;
-                if self._options.build_style == "release":
-                    args.append("--release")
-                elif self._options.build_style == "debug":
-                    args.append("--debug")
-            except:
-                pass
+            #try:
+            #    if self._options.build_style == "release":
+            #        args.append("--release")
+            #    elif self._options.build_style == "debug":
+            #        args.append("--debug")
+            #except:
+            #    pass
 
             # old-run-webkit-tests does not support --skip-failing-tests
             # Using --quiet one Windows fails when we try to use /dev/null, disabling for now until we find a fix
             if sys.platform != "cygwin":
                 args.append("--quiet")
                 args.append("--skip-failing-tests")
+            else
+                args.append("--no-build");
 
         if self._options.quiet:
             args.append("--quiet")
